--- a/9-13.tex
+++ b/9-13.tex
@@ -1,6 +1,6 @@
-\chapter{Intro}
+\chapter{Homogeneous dynamics}
 
-\section{Intro}
+\section{Introduction: Homogeneous dynamics}
 
 Homogeneous dynamics is about a special kind of dynamical system. We start with $G$, a locally compact topological group. Think of 2 examples: $G=\R^n$ and $G=\SL_n(\R)=\set{g\in\cal M_{n\times n}(\R)}{\det g=1}$. 
 
