--- a/9-20.tex
+++ b/9-20.tex
@@ -193,7 +193,7 @@ Show that $\Ga\cir G/H$ is transitive (minimal) iff $\Ga\bs G\cil H$ is transiti
 \end{enumerate}
 \end{exr}
 
-\subsection{Modular spaces of Euclidean lattices}
+\section{Modular spaces of Euclidean lattices}
 Now we talk about specific groups and their lattices. 
 %alg geo, analogue of proper is separable? mean something different. analogy, confusing.
 %almost as bad as character.
