--- a/9-25.tex
+++ b/9-25.tex
@@ -39,7 +39,8 @@ by appropriate choice of $a$ and $u$ you find any $u\in U_{ij}(F)$ is in $D(\SL_
 We study the Siegel domain. It was constructed before he was born in the 19th century by 2 Russian mathematicians; he generalized the construction.
 %K,C
 
-Iwasawa decomposition: we define some subgroups of $\SL_n(\R)$ and see how to get $\SL_n(\R)$ from these subgroups. First consider
+\section{Iwasawa decomposition} 
+We define some subgroups of $\SL_n(\R)$ and see how to get $\SL_n(\R)$ from these subgroups. First consider
 \begin{align}
 K&=\SO_n(\R)<\SL_n(\R),
 \end{align}
@@ -114,7 +115,7 @@ m_{\SL_n(\R)} &\propto \rh \cdot m_{N} \times m_{A^+} \times m_K.
 %contractive up to $K$. 
 %iwasawa of product, doesn't work in simple/nice way. but measures work
 
-\subsection{Siegel domain}
+\section{Siegel domain}
 
 \begin{df}
 Let $s,t>0$. Then define $N_s$, $A_t$, and $\Si_{s,t}$ by
