--- a/9-27.tex
+++ b/9-27.tex
@@ -33,7 +33,7 @@ so each one of the diagonal entries is inside a closed interval, so it is a comp
 %The noncompactness came from the fact there was no restriction on $a_i$. 
 From sticking other groups in $\SL_n(\R)$ you can learn things about then. See e.g. the Borel-Harish-Chandra theorem. If you want to prove the class group is finite, use the geometry of numbers.
 
-\subsection{$\SL_2(\R)$ and hyperbolic plane}
+\section{$\SL_2(\R)$ and hyperbolic plane}
 
 We discuss the relation of $\SL_2(\R)$ to hyperbolic geometry. 
 
@@ -96,7 +96,7 @@ Going towards the point, the distance decays exponentially with the flow.
 On the other side the distance grows exponentially. This is typical hyperbolic behavior, also responsible for interesting dynamics.
 
 The $\SL_2(\R)$ invariant measure on $\bb H$ is $\fc{dx\,dy}{y^2}$, for $z=x+iy$. 
-\subsection{Horospherical groups}
+\section{Horospherical groups}
 
 This is a completely general phenomenon. 
 \begin{df}
@@ -157,7 +157,7 @@ They are perpendicular to corresponding geodesics.
 %unit tangent bundle... circle bundle...
 
 %famous fundamental domain,
-\subsection{Fundamental domain for $\SL_2(\Z)\cir \bb H$}
+\section{Fundamental domain for $\SL_2(\Z)\cir \bb H$}
 
 This is a set $ \cal F\sub \bb H$ such that $\bb H = \bigsqcup_{\ga\in \PSL_2(\Z)} \ga . \cal F$.
 One way to prove $\cal F$ is to look at the action under generators---one is inversion, one is translation. It's a classical calculation of 19th century mathematics. It has no way of working for $\SL_{57}(\R)$. 
@@ -185,7 +185,7 @@ We'll discuss the
 Margulis mixing argument, quantitative nondivergence.
 Just by understanding how the Haar measure behaves under $G$, we can understand equidistribution of horocycles; this doesn't work of other groups.
 
-\subsection{Measurable dynamical systems}
+\section{Measurable dynamical systems}
 
 The systems we are interested in will always be $(\Ga\bs G, \mu)\cil H$, where $H\le G$ is closed. 
 
@@ -220,7 +220,7 @@ Take $A$ $G$-invariant; then  because applying $g$ many times you get $\mu(A)^2=
 Being weakly invariant under a subgroup is a weaker condition. 
 Ergodicity does not descend to subgroups; mixing does.
 To show ergodic for a subgroup, you can prove mixing for a larger group. 
-\subsection{Koopman representation}
+\section{Koopman representation}
 
 Let $G\cir (X,\chi, \mu)$ be a measure-preserving map. There is a unitary representation of $G$, 
 \begin{align}
