--- a/mat519.tex
+++ b/mat519.tex
@@ -59,6 +59,7 @@ We'll use theorems from representation theory, ergodic theory, and Lie groups. W
 \input{9-25.tex}
 \input{9-27.tex}
 \input{10-2.tex}
+\input{10-4.tex}
 %INSERT_HERE
 
 
